deployment/k8s-deployment-2.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usersvc-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: usersvc
  template:
    metadata:
      labels:
        app: usersvc
    spec:
      containers:
      - name: usersvc-image
        image: repo-dev.successfactors.sap.corp/plumber/mock_usersvc:v2
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: usersvc
spec:
  type: NodePort
  ports:
    - port: 8080
      name: http
      targetPort: 8080
      nodePort: 32002
  selector:
    app: usersvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rulesvc-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rulesvc
  template:
    metadata:
      labels:
        app: rulesvc
    spec:
      containers:
      - name: rulesvc-image
        image: repo-dev.successfactors.sap.corp/plumber/mock_rulesvc:v2
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: rulesvc
spec:
  type: NodePort
  ports:
    - port: 8080
      name: http
      targetPort: 8080
      nodePort: 32001
  selector:
    app: rulesvc
