deployment/k8s-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usersvc-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: usersvc
  template:
    metadata:
      labels:
        app: usersvc
    spec:
      containers:
      - name: usersvc-image
        image: repo-dev.successfactors.sap.corp/plumber/mock_usersvc:v2
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 15
          timeoutSeconds: 1
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 15
          timeoutSeconds: 1
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: usersvc
  labels:
    tenant: TenantLifeCycle
spec:
  type: ClusterIP
  ports:
    - port: 8080
      name: http
      targetPort: 8080
  selector:
    app: usersvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rulesvc-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rulesvc
  template:
    metadata:
      labels:
        app: rulesvc
    spec:
      containers:
      - name: rulesvc-image
        image: repo-dev.successfactors.sap.corp/plumber/mock_rulesvc:v2
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: rulesvc
  labels:
    tenant: TenantLifeCycle
spec:
  type: ClusterIP
  ports:
    - port: 8080
      name: http
      targetPort: 8080
  selector:
    app: rulesvc
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
   name: rulesvc
   namespace: mcap
spec:
   rules:
   - host: rulesvc.demo.successfactors.sap.corp
     http:
       paths:
       - backend:
           serviceName: rulesvc
           servicePort: 8080
         path: /
